src/test/deca/context/invalid/homemade/tests/test333_type_op_binaire/test333_type_op_binaire15.deca
// test invalide de la règle 3.33


{
    float a = true == false;
}
